# manga-translate

./: .env.example  .gitignore  Makefile  README.md  analyze_openmantra_benchmark.py  benchmark_openmantra.py  benchmarking.py  edit_image.py  logging_config.py  main.py  models.py  ocr.py  pyproject.toml  setup.sh  start_llamacpp.sh  start_paddlepaddleocr.sh  translate.py
output/attack_on_titan/: attack_on_titan_ocr.json  attack_on_titan_ocr.md  attack_on_titan_translation.md
output/demon_slayer/: demon_slayer_ocr.json  demon_slayer_ocr.md  demon_slayer_translation.md
output/spy_x_family/: spy_x_family_ocr.json  spy_x_family_ocr.md  spy_x_family_translation.md
report/: main.tex
