[project]
name = "manga-vl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "openai>=2.36.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
